--- a/client/src/components/dependencies/css/styles.less
+++ b/client/src/components/dependencies/css/styles.less
@@ -1,16 +1,26 @@
-/* roboto-mono-regular - latin */
+/* Font Imports  */
 @font-face {
-  font-family: 'Roboto Mono';
-  font-style: normal;
-  font-weight: 400;
-  src: url('/assets/fonts/roboto-mono-v5-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Roboto Mono'), local('RobotoMono-Regular'),
-       url('/assets/fonts/roboto-mono-v5-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/assets/fonts/roboto-mono-v5-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/assets/fonts/roboto-mono-v5-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('/assets/fonts/roboto-mono-v5-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('/assets/fonts/roboto-mono-v5-latin-regular.svg#RobotoMono') format('svg'); /* Legacy iOS */
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Roboto'), local('Roboto-Regular'), url('/assets/fonts/Roboto-Regular.ttf') format('truetype');
 }
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    src: local('Roboto Medium'), local('Roboto-Medium'), url('/assets/fonts/Roboto-Medium.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Roboto Bold'), local('Roboto-Bold'), url('/assets/fonts/Roboto-Bold.ttf') format('truetype');
+}
+
+@max-width: 1400px;
+@max-scroll: 20em;
+
 /* Custom CSS Styles */
 body {
 	padding-top: 75px;
@@ -21,7 +31,7 @@ body {
     -moz-padding: 15px; /* firefox bug fix */
 }
 .container-fluid .row {
-    max-width: 1200px;
+    max-width: @max-width;
 }
 #alert-container {
 	z-index: 100;
@@ -40,12 +50,16 @@ body {
 }
 div {
 	&.scroll {
-		max-height: 20em;
+		max-height: @max-scroll;
 		overflow: scroll;
-	}
-	&.scroll-large {
-		max-height: 40em;
-		overflow: scroll;
+		&-lg {
+			max-height: @max-scroll*2;
+			overflow: scroll;
+		}
+		&-xl {
+			max-height: @max-scroll*3;
+			overflow: scroll;
+		}
 	}
 }
 /* Pretty JSON Module theme */
