Minor layout adjustments

--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -114,6 +114,11 @@ div {
     }
 }
 
+legend {
+    font-size: inherit !important;
+    font-weight: bold !important;
+}
+
 // Extra small devices (portrait phones, less than 576px)
 // No media query since this is the default in Bootstrap
 
