Line numbers for text area

--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -152,10 +152,8 @@ legend {
 @media (min-width: 1200px) {}
 
 .line-numbers {
-    background: url(../img/line-numbers.png);
+    background: url(http://i.imgur.com/2cOaJ.png);
     background-attachment: local;
     background-repeat: no-repeat;
-    padding-left: 35px;
-    padding-top: 10px;
     border-color:#ccc;
 }
