--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -116,7 +116,7 @@ div {
 
 .nav-item {
     cursor: pointer;
-    padding: 12px;
+    padding: 10px;
     text-align: center;
 }
 
@@ -143,10 +143,18 @@ legend {
 @media (min-width: 576px) {}
 
 // Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+    .collapse {
+        display: none !important;
+    }  
+}
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {}
+@media (min-width: 992px) {
+    .collapse {
+        display: none !important;
+    }      
+}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {}
