Returning better error messages

--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -163,3 +163,7 @@ legend {
     font-family: Consolas, monaco, monospace;
     font-size: 12px;
 }
+
+.Toastify__toast-body {
+    white-space: pre-line;
+}
