unshift types, auto focus and sticky options

--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -196,3 +196,8 @@ small {
 .Toastify__toast-body {
     white-space: pre-line;
 }
+
+// Boostrap Nav offset for sticky top
+.sticky-offset {
+    top: 65px !important;
+}
