--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -197,7 +197,7 @@ small {
     white-space: pre-line;
 }
 
-// Boostrap Nav offset for sticky top
+// Boostrap Nav offset for sticky top.
 .sticky-offset {
     top: 65px !important;
 }
