--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -214,3 +214,17 @@ small {
 .sticky-offset {
     top: 65px !important;
 }
+
+.sb-outline {
+    .list-group-item {
+        cursor: grab !important;
+        color: inherit;
+    }
+}
+
+.sb-outline {
+    .list-group-item:hover {
+        cursor: grab !important;
+        color: inherit;
+    }
+}
