--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -58,16 +58,20 @@ body {
 }  */
 
 //scrollToTopBtn
-.btn-block {
-    box-shadow: 15px rgba(0, 0, 0, 0.1);
+.btn-rounded {
+    text-align: center;
+    justify-content: center;
     position: fixed;
+    bottom: 3em;
+    right: 3em;
     z-index: 50;
     cursor: pointer;
     transition: all 0.3s ease 0s;
+    border-radius: 10%;
+    //    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 
     &:hover {
-        box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
-        transform: translateY(-7px);
+        transform: translateY(-10px);
     }
 }
 
