--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -147,23 +147,6 @@ div {
     }
 }
 
-.nav-item {
-    cursor: pointer;
-    padding: 10px;
-    text-align: center;
-}
-
-//Schema Creator Styles
-#schema-options {
-    .list-group-item {
-        padding: 5px;
-
-        &-action {
-            cursor: pointer;
-        }
-    }
-}
-
 legend {
     font-size: inherit !important;
     font-weight: bold !important;
@@ -214,9 +197,50 @@ small {
     white-space: pre-line;
 }
 
+.nav-item {
+    cursor: pointer;
+    padding: 8px;
+    text-align: center;
+}
+
 // Boostrap Nav offset for sticky top.
 .sticky-offset {
     top: 65px !important;
+}
+
+.text-area-w100 {
+    width: 100%; 
+    max-width: 100%;
+}
+
+//Schema Creator Styles
+#schema-options {
+
+    .nav-item {
+        padding: 0;
+
+        a {
+            cursor: pointer;
+            padding: 4px 10px;
+        }
+    }    
+
+    .list-group-item {
+        cursor: pointer !important;
+        color: inherit;
+    }
+
+    // .list-group-item {
+    //     // padding: 5px;
+
+    //     &-action {
+    //         cursor: pointer;
+    //     }
+    // }
+
+    // .nav-link {
+    //     padding: 0.2rem 0.9rem;
+    // }    
 }
 
 .sb-outline {
