Added config params to keyvalueeditor

--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -32,6 +32,10 @@ body {
     cursor: pointer;
 }
 
+.form-group {
+    margin-bottom: 0.5rem !important;
+}
+
 .form-label {
     margin-bottom: 0;
 }
