Added card to info and types

--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -28,88 +28,11 @@ body {
     padding-top: 75px;
 }
 
-.cursor-pointer {
-    cursor: pointer;
-}
-
-.form-group {
-    margin-bottom: 0.5rem !important;
-}
-
-.form-label {
-    margin-bottom: 0;
-}
-
-.navbar-brand>img {
-    max-height: 2em;
-    width: auto;
-    -moz-padding: 15px;
-    /* firefox bug fix */
-}
-
 #alert-container {
     z-index: 100;
     position: fixed;
     bottom: 1em;
     right: 1em;
-}
-
-//ALLOW CARD RESIZE; ADD 'ITEM' TO CLASS
-//REMOVE COL SIZE
-/* .card {
-    display: flex;
-    flex-basis: auto;
-}
-
-.card.item {
-    resize: horizontal;
-    overflow: auto;
-    min-width: 10%;
-    max-width: 99%;
-    height: 100%;
-}  */
-
-.card-body-page {
-    height: 40em;
-    overflow-y: auto;
-    padding: 0;
-}
-
-.card-body-scroller {
-    height: 40em;
-    overflow-y: auto;
-    overflow-x: hidden;
-    width: fit-content;
-    position: sticky;
-    top: 0;
-}
-
-.code,
-textarea {
-    font-family: 'Roboto', Consolas, monaco, monospace;
-    font-size: 1em;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    line-height: 18.5714px;
-    white-space: pre-wrap;
-}
-
-div {
-    &.scroll {
-        max-height: $max-scroll;
-        overflow: scroll;
-
-        &-lg {
-            max-height: $max-scroll*2;
-            overflow: scroll;
-        }
-
-        &-xl {
-            max-height: $max-scroll*3;
-            overflow: scroll;
-        }
-    }
 }
 
 /* Pretty JSON Module theme */
@@ -136,9 +59,86 @@ div {
     }
 }
 
+.code, textarea {
+    font-family: 'Roboto', Consolas, monaco, monospace;
+    font-size: 1em;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 18.5714px;
+    white-space: pre-wrap;
+}
+
+div {
+    &.scroll {
+        max-height: $max-scroll;
+        overflow: scroll;
+
+        &-lg {
+            max-height: $max-scroll*2;
+            overflow: scroll;
+        }
+
+        &-xl {
+            max-height: $max-scroll*3;
+            overflow: scroll;
+        }
+    }
+}
+
 legend {
     font-size: inherit !important;
     font-weight: bold !important;
+}
+
+small {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.cm-editor * {
+    font-family: Consolas, monaco, monospace;
+    font-size: 12px;
+}
+
+//ALLOW CARD RESIZE; ADD 'ITEM' TO CLASS
+//REMOVE COL SIZE
+/* .card {
+    display: flex;
+    flex-basis: auto;
+}
+
+.card.item {
+    resize: horizontal;
+    overflow: auto;
+    min-width: 10%;
+    max-width: 99%;
+    height: 100%;
+}  */
+
+/* Bootstrap Overrides */
+.card-header {
+    padding: 8px !important;
+}
+
+.card-body {
+    padding: 8px !important;
+}
+
+.card-body-page {
+    height: 40em;
+    overflow-y: auto;
+    padding: 0;
+}
+
+.card-body-scroller {
+    height: 40em;
+    overflow-y: auto;
+    overflow-x: hidden;
+    width: fit-content;
+    position: sticky;
+    top: 0;
 }
 
 .card-title {
@@ -149,12 +149,86 @@ legend {
     margin-bottom: 2px !important;
 }
 
-small {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+.cursor-pointer {
+    cursor: pointer;
 }
 
+.form-group {
+    margin-bottom: 0.3rem !important;
+}
+
+.form-label {
+    margin-bottom: 0;
+}
+
+.navbar-brand>img {
+    max-height: 2em;
+    width: auto;
+    -moz-padding: 15px;
+    /* firefox bug fix */
+}
+
+.modal-content {
+    .modal-header {
+        padding: .5rem 1rem !important;
+    
+        .modal-title {
+            width: 100%;
+        }
+    
+    }
+    
+    .modal-footer {
+        padding: .5rem 1rem !important;
+    }
+}
+
+.nav-item {
+    cursor: pointer;
+    padding: 8px;
+    text-align: center;
+}
+
+.sticky-offset {
+    top: 65px !important;
+}
+
+.sb-outline {
+    .list-group-item {
+        cursor: grab !important;
+        color: inherit;
+    }
+}
+
+.sb-outline {
+    .list-group-item:hover {
+        cursor: grab !important;
+        color: inherit;
+    }
+}
+
+#schema-options {
+
+    .nav-item {
+        padding: 0;
+
+        a {
+            cursor: pointer;
+            padding: 4px 10px;
+        }
+    }
+
+    .list-group-item {
+        cursor: pointer !important;
+        color: inherit;
+    }
+
+}
+
+.text-area-w100 {
+    width: 100%;
+    max-width: 100%;
+}
 
 // Extra small devices (portrait phones, less than 576px)
 // No media query since this is the default in Bootstrap
@@ -178,74 +252,3 @@ small {
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {}
-
-.cm-editor * {
-    font-family: Consolas, monaco, monospace;
-    font-size: 12px;
-}
-
-.modal-content {
-    .modal-header {
-        padding: .5rem 1rem !important;
-    
-        .modal-title {
-            width: 100%;
-        }
-    
-    }
-    
-    .modal-footer {
-        padding: .5rem 1rem !important;
-    }
-}
-
-.Toastify__toast-body {
-    white-space: pre-line;
-}
-
-.nav-item {
-    cursor: pointer;
-    padding: 8px;
-    text-align: center;
-}
-
-.sticky-offset {
-    top: 65px !important;
-}
-
-.text-area-w100 {
-    width: 100%;
-    max-width: 100%;
-}
-
-#schema-options {
-
-    .nav-item {
-        padding: 0;
-
-        a {
-            cursor: pointer;
-            padding: 4px 10px;
-        }
-    }
-
-    .list-group-item {
-        cursor: pointer !important;
-        color: inherit;
-    }
-
-}
-
-.sb-outline {
-    .list-group-item {
-        cursor: grab !important;
-        color: inherit;
-    }
-}
-
-.sb-outline {
-    .list-group-item:hover {
-        cursor: grab !important;
-        color: inherit;
-    }
-}
