--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -117,6 +117,18 @@ small {
     height: 100%;
 }  */
 
+/* Custom Styles */
+/* Use frugally, last resort, bootstrap first */
+#command-fields {
+    .form-group {
+        margin: .5em;
+    }
+
+    .p-2 {
+        padding: 0.25rem 0.5em !important;
+    }    
+}
+
 /* Bootstrap Overrides */
 .card-header {
     padding: 8px !important;
