--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -59,7 +59,8 @@ body {
     }
 }
 
-.code, textarea {
+.code,
+textarea {
     font-family: 'Roboto', Consolas, monaco, monospace;
     font-size: 1em;
     font-style: normal;
@@ -169,13 +170,13 @@ small {
 .modal-content {
     .modal-header {
         padding: .5rem 1rem !important;
-    
+
         .modal-title {
             width: 100%;
         }
-    
+
     }
-    
+
     .modal-footer {
         padding: .5rem 1rem !important;
     }
@@ -226,6 +227,13 @@ small {
 .text-area-w100 {
     width: 100%;
     max-width: 100%;
+}
+
+.scrollToTopBtn {
+    z-index: 999;
+    position: fixed;
+    right: 1em;
+    bottom: 3em;
 }
 
 // Extra small devices (portrait phones, less than 576px)
