--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -141,6 +141,10 @@ small {
     padding: 0;
 }
 
+.form-control-sm {
+    height: 30px;
+}
+
 .card-body-scroller {
     height: 40em;
     overflow-y: auto;
