--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -136,7 +136,7 @@ small {
 }
 
 .card-body-page {
-    height: 40em;
+    height: 70vh;
     overflow-y: auto;
     padding: 0;
 }
@@ -146,7 +146,7 @@ small {
 }
 
 .card-body-scroller {
-    height: 40em;
+    height: 70vh;
     overflow-y: auto;
     overflow-x: hidden;
     width: fit-content;
