--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -23,7 +23,9 @@
 $max-width: 1400px;
 $max-scroll: 20em;
 
-/* Custom CSS Styles */
+/* Custom Styles */
+/* Use frugally, last resort, bootstrap first */
+
 body {
     padding-top: 75px;
 }
@@ -33,6 +35,10 @@ body {
     position: fixed;
     bottom: 1em;
     right: 1em;
+}
+
+.input-group {
+    flex-wrap: nowrap;
 }
 
 /* Pretty JSON Module theme */
@@ -118,8 +124,21 @@ small {
     height: 100%;
 }  */
 
-/* Custom Styles */
-/* Use frugally, last resort, bootstrap first */
+.smSelectStyle {
+
+    display: block;
+    width: 100%;
+
+    .css-1xc3v61-indicatorContainer {
+        padding: 0 !important
+    }
+
+    .css-15lsz6c-indicatorContainer {
+        padding: 0 !important
+    }    
+
+}
+
 #command-fields {
     .form-group {
         margin: .5em;
