--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -38,7 +38,7 @@ body {
 }
 
 .input-group {
-    flex-wrap: nowrap;
+    flex-wrap: nowrap !important;
 }
 
 /* Pretty JSON Module theme */
@@ -107,36 +107,6 @@ small {
 .cm-editor * {
     font-family: Consolas, monaco, monospace;
     font-size: 12px;
-}
-
-//ALLOW CARD RESIZE; ADD 'ITEM' TO CLASS
-//REMOVE COL SIZE
-/* .card {
-    display: flex;
-    flex-basis: auto;
-}
-
-.card.item {
-    resize: horizontal;
-    overflow: auto;
-    min-width: 10%;
-    max-width: 99%;
-    height: 100%;
-}  */
-
-.smSelectStyle {
-
-    display: block;
-    width: 100%;
-
-    .css-1xc3v61-indicatorContainer {
-        padding: 0 !important
-    }
-
-    .css-15lsz6c-indicatorContainer {
-        padding: 0 !important
-    }    
-
 }
 
 #command-fields {
