default bootstrap theme switcher

--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -246,3 +246,10 @@ small {
 @media (min-width: 1200px) {}
 
 @import '~bootstrap/scss/bootstrap.scss';
+
+// Color mode variables in _root.scss
+@include color-mode(dark) {
+    :root {
+        background-color: black;
+    }
+}
