--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -116,6 +116,10 @@ small {
 }
 
 /* Bootstrap Overrides */
+a {
+    text-decoration: none !important;
+}
+
 .card-header {
     padding: 8px !important;
 }
