--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -266,4 +266,16 @@ a {
 @import '~bootstrap/scss/bootstrap.scss';
 
 // Color mode variables in _root.scss
-@include color-mode(dark) {}
+@include color-mode(dark) {
+    $primary: #2b5c8a;
+
+    [class*="primary"] {
+        background-color: #{$primary} !important;
+    }
+
+    .btn {
+        border: $primary;
+    }
+
+
+}
