updated secondary color for light

--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -296,5 +296,18 @@ a,
         border: $primary;
     }
 
+}
+
+@include color-mode(light) {
+    $secondary: #E0E0E0;
+
+    [class*="secondary"]:not(.btn-outline-secondary) {
+        background-color: #{$secondary} !important;
+    }
+
+    .btn-outline-secondary,
+    .btn-secondary {
+        border: $secondary;
+    }
 
 }
