--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -274,6 +274,14 @@ a,
     bottom: 3em;
 }
 
+.jadn-type {
+  border: none !important;
+}
+
+.jadn-type:hover {
+  border: 1px solid #2684FF !important;
+}
+
 // Extra small devices (portrait phones, less than 576px)
 // No media query since this is the default in Bootstrap
 
