Implement matt ui changes & expand

--- a/client/src/components/dependencies/assets/css/styles.scss
+++ b/client/src/components/dependencies/assets/css/styles.scss
@@ -275,11 +275,11 @@ a,
 }
 
 .jadn-type {
-  border: none !important;
+  border: none;
 }
 
 .jadn-type:hover {
-  border: 1px solid #2684FF !important;
+  border: 2px solid #ffc107;
 }
 
 // Extra small devices (portrait phones, less than 576px)
